# CodingProblems_2024

./: .gitignore  CMakeLists.txt  README.md
src/CodeWars/: contents.md
src/CodeWars/InteractiveInterpreter/: main.cpp  n-Queens_MC_2025-02-16-171300.collapsed  problem_statement.md  tests.cpp
src/CodeWars/Prime_Streaming/: Primes.java
src/CodeWars/RGB_to_hex_conversion/: main.cpp  tests.cpp
src/CodeWars/Snail_sort/: main.cpp
src/CodeWars/n-Queens/: info.md  main.cpp  problem_statement.md
src/CodeWars/n-Queens/MinConflicts/: main.cpp  test.cpp  tests.txt
src/CodeWars/n-Queens/MinConflicts/tests/: tests-v0.2.0.txt  tests-v0.2.1  tests-v0.2.1.txt  tests-v0.2.2.txt  tests-v0.3.0.txt
src/CodeWars/n-Queens/SimulatedAnnealing/: main.cpp  temp.cpp  tests.txt
src/CodeWars/n-Queens/docSrc/: Solution.tex
src/utils/: ArrayUtils.cpp
